--- a/styles.css
+++ b/styles.css
@@ -9,60 +9,60 @@ body {
   text-align: center;
   font-family: 'Fira Mono', monospace;
   font-size: 16px;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 /* COLORS */
-:root {
-  --color-white: #fff;
-  --color-white-counter: #f5f5f5;
-  --color-black: rgba(0, 0, 0, 1);
-  --color-gray: #6f6f6f;
-  --color-blue: #3759d1;
-  --color-accent-blue: #1e90ff;
-  --color-body: #707070;
-  --color-bg-footer: #252525;
-  --color-header: #3f91f7;
-}
+/*:root {*/
+/*  --color-white: #fff;*/
+/*  --color-white-counter: #f5f5f5;*/
+/*  --color-black: rgba(0, 0, 0, 1);*/
+/*  --color-gray: #6f6f6f;*/
+/*  --color-blue: #3759d1;*/
+/*  --color-accent-blue: #1e90ff;*/
+/*  --color-body: #707070;*/
+/*  --color-bg-footer: #252525;*/
+/*  --color-header: #3f91f7;*/
+/*}*/
 
-/* TWO COL LAYOUT */
-:root {
-  --container-width: 375px;
-  --container-padding-big: 2.5rem;
-  --container-padding-small: 1.125rem;
-}
+/*!* TWO COL LAYOUT *!*/
+/*:root {*/
+/*  --container-width: 375px;*/
+/*  --container-padding-big: 2.5rem;*/
+/*  --container-padding-small: 1.125rem;*/
+/*}*/
 
-@media (min-width: 480px) {
-  :root {
-    --container-width: 312px;
-    --container-padding-big: 2.5rem;
-    --container-padding-small: 1.125rem;
-  }
-}
+/*@media (min-width: 480px) {*/
+/*  :root {*/
+/*    --container-width: 312px;*/
+/*    --container-padding-big: 2.5rem;*/
+/*    --container-padding-small: 1.125rem;*/
+/*  }*/
+/*}*/
 
-@media (min-width: 768px) {
-  :root {
-    --container-width: 688px;
-    --container-padding-big: 5rem;
-    --container-padding-small: 2rem;
-  }
-}
+/*@media (min-width: 768px) {*/
+/*  :root {*/
+/*    --container-width: 688px;*/
+/*    --container-padding-big: 5rem;*/
+/*    --container-padding-small: 2rem;*/
+/*  }*/
+/*}*/
 
-@media (min-width: 1200px) {
-  :root {
-    --container-width: 975px;
-    --container-padding-big: 8rem;
-    --container-padding-small: 2rem;
-  }
-}
+/*@media (min-width: 1200px) {*/
+/*  :root {*/
+/*    --container-width: 975px;*/
+/*    --container-padding-big: 8rem;*/
+/*    --container-padding-small: 2rem;*/
+/*  }*/
+/*}*/
 
-@media (min-width: 1440px) {
-  :root {
-    --container-width: 1200px;
-    --container-padding-big: 15.5rem;
-    --container-padding-small: 11rem;
-  }
-}
+/*@media (min-width: 1440px) {*/
+/*  :root {*/
+/*    --container-width: 1200px;*/
+/*    --container-padding-big: 15.5rem;*/
+/*    --container-padding-small: 11rem;*/
+/*  }*/
+/*}*/
 
 @media (min-width: 1543px) {
   :root {
