--- a/styles.css
+++ b/styles.css
@@ -1,98 +1,107 @@
+/* -------------- COLORS -------------- */
+:root {
+  --color-white: #fff;
+  --color-bg: #2447ff;
+  --color-yellow: #fff500;
+  --color-black: #000000;
+}
+
 html {
   max-width: 100%;
   overflow-x: hidden;
 }
 
 body {
-  background-color: #283739;
-  color: #7dd87d;
-  text-align: center;
+  background-color: var(--color-bg);
+  color: var(--color-yellow);
   font-family: 'Fira Mono', monospace;
   font-size: 16px;
-  /*height: 100%;*/
+  padding: 0;
+  margin: 0;
 }
 
-/* COLORS */
-/*:root {*/
-/*  --color-white: #fff;*/
-/*  --color-white-counter: #f5f5f5;*/
-/*  --color-black: rgba(0, 0, 0, 1);*/
-/*  --color-gray: #6f6f6f;*/
-/*  --color-blue: #3759d1;*/
-/*  --color-accent-blue: #1e90ff;*/
-/*  --color-body: #707070;*/
-/*  --color-bg-footer: #252525;*/
-/*  --color-header: #3f91f7;*/
-/*}*/
+/* -------------- FONTS -------------- */
 
-/*!* TWO COL LAYOUT *!*/
-/*:root {*/
-/*  --container-width: 375px;*/
-/*  --container-padding-big: 2.5rem;*/
-/*  --container-padding-small: 1.125rem;*/
-/*}*/
-
-/*@media (min-width: 480px) {*/
-/*  :root {*/
-/*    --container-width: 312px;*/
-/*    --container-padding-big: 2.5rem;*/
-/*    --container-padding-small: 1.125rem;*/
-/*  }*/
-/*}*/
-
-/*@media (min-width: 768px) {*/
-/*  :root {*/
-/*    --container-width: 688px;*/
-/*    --container-padding-big: 5rem;*/
-/*    --container-padding-small: 2rem;*/
-/*  }*/
-/*}*/
-
-/*@media (min-width: 1200px) {*/
-/*  :root {*/
-/*    --container-width: 975px;*/
-/*    --container-padding-big: 8rem;*/
-/*    --container-padding-small: 2rem;*/
-/*  }*/
-/*}*/
-
-/*@media (min-width: 1440px) {*/
-/*  :root {*/
-/*    --container-width: 1200px;*/
-/*    --container-padding-big: 15.5rem;*/
-/*    --container-padding-small: 11rem;*/
-/*  }*/
-/*}*/
-
-@media (min-width: 1543px) {
-  :root {
-    --container-width: 1440px;
-    --container-padding-big: 11rem;
-    --container-padding-small: 6rem;
-  }
+h1 {
+  font-family: 'Roslindale Variable';
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 66px;
+  text-shadow: 0px 4px 2px rgba(18, 17, 17, 0.8);
 }
 
+/* -------------- LAYOUT -------------- */
 .content__wrapper {
-  max-width: 1920px;
+  padding: 56px 30px;
+  opacity: 0.8;
+  width: 1440px;
+  max-width: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
   margin: 0 auto;
-  padding: var(--container-padding-small);
 }
 
-.dynamic__text__wrapper {
-  height: 200px;
+.hero__content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
-#text {
-  font-size: 20px;
+.hero__content--text {
+  height: 249px;
+  width: 316px;
 }
 
-button {
-  background-color: #555;
-  color: #ddd;
-  padding: 1rem 2rem;
-  font-size: 16px;
+.hero__content--gifs {
+  padding-bottom: 42px;
+}
+
+.hero__button {
+  border: 2px solid #000000;
+  border-radius: 80px;
+  width: 271px;
+  height: 63.22px;
+  background-color: var(--color-white);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 24px;
+  align-items: center;
+}
+
+.heart {
+  background-color: var(--color-white);
+  width: 42px;
+  height: 42px;
+}
+
+.hero__button p {
+  font-family: 'Syne';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 43px;
+  color: var(--color-black);
+}
+
+.emoji__laugh {
+  width: 200px;
+  background-color: var(--color-bg);
+}
+
+.two__gifs--container {
+  display: flex;
+  position: relative;
+}
+
+.emoji__laugh.cat {
+  height: 136px;
+}
+
+.emoji__laugh.bird {
+  position: absolute;
+  top: 526px;
+  width: 25%;
+  left: 62px;
 }
