--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   --color-bg: #2447ff;
   --color-yellow: #fff500;
   --color-black: #000000;
+  --color-red: #ff0000;
 }
 
 html {
@@ -28,11 +29,24 @@ h1 {
   font-size: 64px;
   line-height: 66px;
   text-shadow: 0px 4px 2px rgba(18, 17, 17, 0.8);
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  h1 {
+    padding: 0 46px;
+  }
+}
+
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 98px;
+    line-height: 112px;
+  }
 }
 
 /* -------------- LAYOUT -------------- */
 .content__wrapper {
-  padding: 56px 30px;
   opacity: 0.8;
   width: 1440px;
   max-width: 100%;
@@ -41,20 +55,24 @@ h1 {
   margin: 0 auto;
 }
 
+.hero__wrapper {
+  padding: 56px 30px;
+}
+
 .hero__content {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
 }
 
 .hero__content--text {
-  height: 249px;
   width: 316px;
+  /* height: 200px; */
+  height: 293px;
 }
 
-.hero__content--gifs {
-  padding-bottom: 42px;
+.button__wrapper {
+  display: flex;
+  justify-content: center;
 }
 
 .hero__button {
@@ -85,6 +103,10 @@ h1 {
   color: var(--color-black);
 }
 
+.hero__content--gifs {
+  padding-bottom: 48px;
+}
+
 .emoji__laugh {
   width: 200px;
   background-color: var(--color-bg);
@@ -101,7 +123,76 @@ h1 {
 
 .emoji__laugh.bird {
   position: absolute;
-  top: 526px;
+  top: 533px;
   width: 25%;
   left: 62px;
+}
+
+@media (min-width: 768px) {
+  .content__wrapper {
+    padding: 87px 52px;
+  }
+
+  .hero__content--gifs {
+    margin: 0 auto;
+  }
+
+  .hero__content--text {
+    width: 661px;
+  }
+
+  .hero__content--gifs {
+    padding-bottom: 116px;
+  }
+
+  .emoji__laugh.bird {
+    left: 130px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .hero__wrapper {
+    position: relative;
+  }
+  .hero__content {
+    flex-direction: row;
+  }
+
+  .hero__content--text {
+    width: 770px;
+  }
+
+  .emoji__laugh.bird {
+    left: 605px;
+    top: 277px;
+    width: 11%;
+  }
+
+  .button__wrapper {
+    justify-content: flex-start;
+    position: absolute;
+    top: 409px;
+    left: 51px;
+  }
+}
+
+.info__content {
+  background-color: var(--color-yellow);
+}
+
+.pigeon__wrapper {
+  padding: 120px 30px;
+}
+
+.pigeon__wrapper img {
+  width: 225px;
+}
+
+.where__text {
+  font-family: 'Roslindale Variable';
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 74px;
+  color: var(--color-red);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.8);
 }
