--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ h1 {
   position: relative;
 }
 
-.emoji__laugh.cat {
+.emoji__laugh.sticker {
   position: absolute;
   height: 426px;
   left: -87px;
@@ -164,6 +164,21 @@ h1 {
   z-index: -1;
   display: flex;
   flex: 2;
+  transition: all 1s;
+  animation: fadeIn 1s;
+  -webkit-animation: fadeIn 1s;
+  -moz-animation: fadeIn 1s;
+  -o-animation: fadeIn 1s;
+  -ms-animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .emoji__laugh.bird {
